src/tests/fixtures/locate/type.ts.expected
-----------------
INPUT
----------------- 
// Locate: User
/** @gqlType */
type User = {
  /** @gqlField */
  name: string;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/locate/type.ts:3:6 - error: Located here

3 type User = {
       ~~~~
